# ap-latam

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  .travis.yml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.md  default.cfg  gatsby-config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_with_docker.sh  setup.cfg  setup.py  tox.ini
aplatam/: build_trainset.py  class_balancing.py  detect.py  post_process.py  train.py  train_classifier.py  util.py
aplatam/console/: detect.py  prepare.py  train.py
aplatam/old/: _1_build_trainset.py  _2_balance_classes.py  _3_train_model.py  _4_predict.py  _7_evaluate_models.py  util.py
data/: cities.json
docker/: entrypoint.sh
misc/maskrcnn/: README.md  buildings.py  mask_rcnn_buildings.ipynb
notebooks/: mask_rcnn_buildings.ipynb
script/: dissolve.py  dissolve_with_blocks.py
scripts/: dissolve_with_blocks.py
src/aplatam/: build_trainset.py  skeleton.py  train.py  util.py
src/components/: city_list.js  footer.js  navbar.js
src/data/: press.js
src/layouts/: en.js  es.js  index.js  index.sass
src/pages/: _data.js  _footer.en.js  _footer.es.js  _map.js  contact.en.js  contact.es.js  contact.js  data.en.js  data.es.js  data.js  index.en.js  index.es.js  index.js  index.sass  license.js  (+6 more)
tests/: conftest.py  test_ap_detect.py  test_ap_train.py  test_build_trainset.py  test_detect.py  test_post_process.py  test_skeleton.py  test_train_classifier.py  test_util.py
web/: .gitignore  LICENSE.md  README.md
(+32 files in other folders)
