[tool.poetry]
name = "aplatam"
version = "0.1.0"
description = ""
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/dymaxionlabs/ap-latam"
repository = "https://github.com/dymaxionlabs/ap-latam"
authors = [
    "Federico Baylé <federico@dymaxionlabs.com>",
    "Damián Silvani <damian@dymaxionlabs.com>",
]

[tool.poetry.dependencies]
python = "^3"
rtree = "^0.8.3"
shapely = "1.6.4.post1"
scikit-image = "^0.13.1"
numpy = "^1.14"
pyproj = "1.9.5.1"
tqdm = "^4.23"
keras = "^2.1"
fiona = "1.7.11.post2"
rasterio = {version = "*", allows-prereleases = true}
tensorflow = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
pytest-cov = "^2.5"
mock = "^2.0"
pytest-mock = "^1.10"
pylint = "^1.9"
yapf = "^0.22.0"
coverage = "^4.5"

[tool.poetry.scripts]
ap_prepare = 'aplatam.console.prepare:run'
ap_train = 'aplatam.console.train:run'
ap_detect = 'aplatam.console.detect:run'
